objects/Asset_Assignment__c/Asset_Assignment__c.object-meta.xml
<CustomObject>
    <label>Asset Assignment</label>
    <nameField>
        <label>Asset Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>