objects/Asset_Assignment__c/fields/ACV_Asset__c.field-meta.xml
<CustomField>
    <fullName>ACV_Asset__c</fullName>
    <label>ACV Asset</label>
    <referenceTo>ACV_Assets__c</referenceTo>
    <relationshipLabel>Asset Assignments</relationshipLabel>
    <relationshipName>Asset_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>