objects/Asset_Assignment__c/fields/Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag__c</fullName>
    <label>Asset Tag</label>
    <length>250</length>
    <type>Text</type>
</CustomField>