objects/Asset_Assignment__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned to Contact</description>
    <inlineHelpText>Assigned to Contact</inlineHelpText>
    <label>Assigned To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Assignment</relationshipLabel>
    <relationshipName>Asset_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>