objects/Asset_Assignment__c/fields/Assigned_To_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned To Resource</description>
    <inlineHelpText>Assigned To Resource</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Asset Assignment</relationshipLabel>
    <relationshipName>Asset_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>