objects/Asset_Assignment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10NS</fullName>
            </value>
            <value>
                <fullName>3020</fullName>
            </value>
            <value>
                <fullName>7259</fullName>
            </value>
            <value>
                <fullName>790</fullName>
            </value>
            <value>
                <fullName>9020</fullName>
            </value>
            <value>
                <fullName>Compute Stick</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT - AER1600LP4</fullName>
                <label>Cradlepoint - AER1600LP4</label>
            </value>
            <value>
                <fullName>Cradlepoint CBA850</fullName>
            </value>
            <value>
                <fullName>Cradlepoint E330</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT - MC400-1200M-B</fullName>
                <label>Cradlepoint - MC400-1200M-B</label>
            </value>
            <value>
                <fullName>CRADLEPOINT MC400LP6</fullName>
                <label>Cradlepoint MC400LP6</label>
            </value>
            <value>
                <fullName>CRADLEPOINT - MC400LPE</fullName>
                <label>Cradlepoint - MC400LPE</label>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Fortigate 100D</fullName>
            </value>
            <value>
                <fullName>FortiGate 100E</fullName>
            </value>
            <value>
                <fullName>FortiGate 300D</fullName>
            </value>
            <value>
                <fullName>FortiGate 60D</fullName>
            </value>
            <value>
                <fullName>FortiGate 60E</fullName>
            </value>
            <value>
                <fullName>FortiGate 60E-POE</fullName>
            </value>
            <value>
                <fullName>FortiGate 60F</fullName>
            </value>
            <value>
                <fullName>FortiGate 80E</fullName>
            </value>
            <value>
                <fullName>FortiGate 80E-POE</fullName>
            </value>
            <value>
                <fullName>FortiGate 90D</fullName>
            </value>
            <value>
                <fullName>FortiGate 90D-POE</fullName>
            </value>
            <value>
                <fullName>Fortinet AP</fullName>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPad (5th generation)</fullName>
            </value>
            <value>
                <fullName>iPad (6th Generation)</fullName>
            </value>
            <value>
                <fullName>iPad (8th Generation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>