objects/Asset_Assignment__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <label>SC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>