objects/Asset_Assignment__c/fields/Service_Centers__c.field-meta.xml
<CustomField>
    <fullName>Service_Centers__c</fullName>
    <formula>Assigned_To__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center</label>
    <type>Text</type>
</CustomField>