objects/Asset_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>In IT Office</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>