objects/Asset_Assignment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Cradlepoint</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Fortinet</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Mifi</fullName>
            </value>
            <value>
                <fullName>Polycom</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>VM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>