objects/Asset_Assignment__c/listViews/Desk_Phone.listView-meta.xml
<ListView>
    <fullName>Desk_Phone</fullName>
    <columns>NAME</columns>
    <columns>ACV_Asset__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACV_Asset__c</field>
        <operation>contains</operation>
        <value>Desk Phone</value>
    </filters>
    <label>Desk Phone</label>
</ListView>