objects/Asset_Assignment__c/listViews/iPad.listView-meta.xml
<ListView>
    <fullName>iPad</fullName>
    <columns>NAME</columns>
    <columns>ACV_Asset__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACV_Asset__c</field>
        <operation>contains</operation>
        <value>iPad</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
    </filters>
    <label>iPad</label>
</ListView>