objects/Asset_Assignment__c/listViews/Unassigned_Devices.listView-meta.xml
<ListView>
    <fullName>Unassigned_Devices</fullName>
    <columns>NAME</columns>
    <columns>Asset_Tag__c</columns>
    <columns>ACV_Asset__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unassigned</value>
    </filters>
    <label>Unassigned Devices</label>
</ListView>